--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -17,7 +17,8 @@ editor_options:
   * [LD mismatch diagnosis using SuSiE_RSS](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
   * [Detect LD mismatch for LDL and aFib using DENTIST vs. SuSiE_RSS](detect_LD_mismatch_gwas_UKBBref_DENTIST_susie_rss.html)
   * [Compare DENTIST and SuSiE_RSS for LD mismatch detection on example locus with manually changed z-scores](test_LD_mismatch_DENTIST_susierss.html)
-
+  * [Compare LD mismatch filterng on real data](compare_LD_mismatch_filtering_real_data.html)
+  
 # Multi-tissue 
 
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
