--- a/analysis/simulation_E_S_three_tissues.Rmd
+++ b/analysis/simulation_E_S_three_tissues.Rmd
@@ -130,7 +130,7 @@ est <- rbind(cbind(1,y1),cbind(2,y2))
 plot_par_2(truth,est,xlabels = c("Liver_E","Liver_S"),ylim=c(0,300),ylab= TeX("Enrichment $\\pi_G/\\pi_V$"))
 ```
 
-#### PIP Calibration Plot
+### PIP Calibration Plot
 ```{r, fig.width= 4, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 f1 <- plot_PIP(configtag, runtag, paste(1, 1:5, sep = "-"), main = "")
 f1
@@ -494,7 +494,7 @@ plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E
 ```
 
 ### Estimated Enrichment
-```{r, fig.width= 4, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
+```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
 y1 <- results_df$pve_Liver_Expression/results_df$prior_SNP
 y2 <- results_df$pve_Liver_Splicing/results_df$prior_SNP
 y3 <- results_df$pve_Lung_Expression/results_df$prior_SNP
@@ -507,7 +507,7 @@ est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6
 plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E","Spleen_S"),ylim=c(0,250),ylab= TeX("Enrichment $\\pi_G/\\pi_V$"))
 ```
 
-#### PIP Calibration Plot
+### PIP Calibration Plot
 ```{r, fig.width= 4, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 f1 <- plot_PIP(configtag, runtag, paste(5, 1:5, sep = "-"), main = "")
 f1
@@ -521,6 +521,6 @@ f1
 
 ### PIP Calibration Plot (True parameters)
 ```{r, fig.width= 4, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
-f1 <- plot_PIP_true(configtag, runtag, paste(5, 1:3, sep = "-"), main = "")
+f1 <- plot_PIP_true(configtag, runtag, paste(5, 1:5, sep = "-"), main = "")
 f1
 ```
